libycp/testsuite/tests/errors/Notifications3.ycp

# ---------------------------------------------------------
#
#  Filename:    Notifications.ycp
#
#  Purpose:     test cases for YCP test
#
#  Creator:     jd@suse.de
#
#  Maintainer:  jd@suse.de
#
# ---------------------------------------------------------

// conditionals: a condition can oly evaluate to true or false
// otherwise an error occours:
// libycp[27] condition * in if statement evaluates to *, but only true and false are allowed
{ if( nil ) return "Condition is nil"; }
{ if( 7 + 5 ) return "Condition is integer"; }
{ if( 7.5 ) return "Condition is float"; }
{ if( "true" ) return "Condition is string"; }
// time not tested
{ if( . ) return "Condition is path"; }
{ if( [ true ] ) return "Condition is list"; }
// term not tested
{ if( $[ "true": true ] ) return "Condition is map"; }


// select with negative index
{
    list  node1 = [ 1, 2 ];
    list  node2 = [ 3, 4 ];
    list  node3 = [ 5, 6 ];
    list  node4 = [ node2, node3 ];
    list  node5 = [ node1, node4 ];
    list  node6 = [ 7 ];
    list  node7 = [ node5, node6 ];

    return( select( node7, -1, nil ) == nil );
//  "test case select for lists with negative index finished" 
}

